--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-    <label>.</label>
-    <input type="text" id="bill" />
-    <label>..</label>
-    <input type="text" id="tip" />
-    <button class="calc" onclick="calculate()">calculate</button>
-    <div class="total"></div>
+    <div class="main__wrapper">
+        <h1>Tip Calculator</h1>
+        <p>Enter the bill amount and tip percentage to calculate the total.</p>
+        <label>Bill amount:</label>
+        <input type="number" id="bill" />
+        <label>Tip percentage:</label>
+        <input type="number" id="tip" />
+        <button class="calc" onclick="calculate()">Calculate</button>
+        <label>Total:</label>
+        <div class="total">0.00</div>
+    </div>
 </body>
 <script src="index.js"></script>
 
